// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardSTepButtons should add custom className to toolbar 1`] = `
<footer
  className="pf-c-wizard__footer foo-class"
>
  <Button
    onClick={[MockFunction]}
    type="button"
    variant="primary"
  >
    Submit
  </Button>
  <Button
    onClick={[MockFunction]}
    type="button"
    variant="secondary"
  >
    Back
  </Button>
  <Button
    onClick={[MockFunction]}
    type="button"
    variant="link"
  >
    Cancel
  </Button>
</footer>
`;

exports[`<WizardSTepButtons should render correctly 1`] = `
<footer
  className="pf-c-wizard__footer "
>
  <Button
    onClick={[MockFunction]}
    type="button"
    variant="primary"
  >
    Submit
  </Button>
  <Button
    onClick={[MockFunction]}
    type="button"
    variant="secondary"
  >
    Back
  </Button>
  <Button
    onClick={[MockFunction]}
    type="button"
    variant="link"
  >
    Cancel
  </Button>
</footer>
`;
